# paper-trading-platform

./: .claudeignore  .gitignore  design.md  package.json
backend/: .gitignore  main.py  package.json  pyproject.toml  requirements.txt
backend/core/: auth.py  config.py  queue.py
backend/data/: snapshots.json
backend/models/: __init__.py  account.py  balance.py  competition.py  order.py  position.py  price.py  trade.py  user.py
backend/routers/: auth.py  leaderboard.py  orders.py  portfolio.py  prices.py
backend/schemas/: leaderboard.py  orders.py  portfolio.py  prices.py  users.py
backend/scripts/: flush_db.py  ingest_prices.py  seed_db.py  test_alpaca.py  visualize_models.py
backend/services/: alpaca.py  orders.py  portfolio.py  prices.py
engine/: go.mod  main.go
engine/db/: db.go
engine/executor/: executor.go
engine/models/: models.go
engine/queue/: queue.go
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/components/: header-bar.tsx  leaderboard-panel.tsx  open-orders-panel.tsx  positions-panel.tsx  price-chart-panel.tsx  submit-order-panel.tsx  symbol-watchlist.tsx  trade-history-panel.tsx
frontend/hooks/: use-api-client.ts
frontend/lib/: endpoints.ts
